--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en" class="scrollbar-thin scrollbar-track-zinc-800 scrollbar-thumb-zinc-500">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="/images/favicon.svg" type="image/svg+xml" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dhruvil-Patel-Portfolio</title>
-  <link rel="shortcut icon" href="/Dhruvil-Patel/public/images/favicon.svg" type="image/svg+xml">
+  <link rel="shortcut icon" href="/images/favicon.svg" type="image/svg+xml">
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap" rel="stylesheet">
